app versao atualizada

--- a/www/templates/tab-principal.html
+++ b/www/templates/tab-principal.html
@@ -1,13 +1,16 @@
 <ion-view view-title="Menu">
-
     <ion-content class="">
         <div class="hero">
             <img src="img/bg-menu.jpg" alt="">
         </div>
         <div class="list">
-            <a class="item item-icon-left item-icon-right" href="#/tab/veiculos">
-                <i class="icon calm ion-model-s"></i> Veículos
+            <a class="item item-icon-left item-icon-right new-car-icon " href="#/tab/avaliacao">
+                <i class="icon new-car-icon ion-model-s"></i> Comprar um novo
                 <i class="icon ion-ios-arrow-right"></i>
+            </a>
+            <a class="item item-icon-left item-icon-right" href="#/tab/veiculos">
+                <i class="icon calm ion-android-car"></i> Veículos
+                <i class="icon ion-ios-arrow-right "></i>
             </a>
             <a class="item item-icon-left item-icon-right" href="#/tab/agendamento">
                 <i class="icon calm ion-calendar"></i> Agendamentos
@@ -15,10 +18,6 @@
             </a>
             <a class="item item-icon-left item-icon-right" href="#/tab/funilaria">
                 <i class="icon calm ion-paintbrush"></i> Funilaria
-                <i class="icon ion-ios-arrow-right"></i>
-            </a>
-            <a class="item item-icon-left item-icon-right" href="#/tab/avaliacao">
-                <i class="icon calm ion-clipboard"></i> Comprar um carro
                 <i class="icon ion-ios-arrow-right"></i>
             </a>
             <a class="item item-icon-left item-icon-right" href="#/tab/seguro">
