--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,84 +1,98 @@
-/* Empty. Add your own CSS if you like */
-/*.main-top-content{
-    top: 44px;
-}*/
-
-.hero{
+.hero {
     position: relative;
 }
 
-.hero img{
+.hero img {
+    display: block;
     width: 100%;
-    display: block;;
 }
 
-.alert-circle{
-    position: absolute;
-    right: 10%;
-    top: 2px;
+.alert-circle {
     font-size: 11px;
-    padding: 5px;
+    font-weight: bold;
+    line-height: 12px;
+    position: absolute;
+    z-index: 10;
+    top: 2px;
+    right: 10%;
     min-width: 22px;
     height: 22px;
-    line-height: 12px;
+    padding: 5px;
     text-align: center;
-    z-index: 10;
-    background-color: #F34C4C;
     color: #fff;
-    font-weight: bold;
     border-radius: 20px;
+    background-color: #f34c4c;
 }
 
-.item.item-car img{
-    border: 2px solid #11C1F3;
+.item.item-car img {
+    border: 2px solid #11c1f3;
     border-radius: 5px;
 }
 
 .item.item-car h2 {
     font-size: 15px;
     font-weight: bold;
-    color: #565656;
     margin-bottom: 5px;
+    color: #565656;
 }
 
-.item.item-car b{
+.item.item-car b {
     font-size: 11px;
     margin-right: 5px;
 }
 
-.item.item-car p{
+.item.item-car p {
     font-size: 12px;
-    margin-bottom: 0;
-    text-overflow: clip;
     overflow: visible;
-    white-space: normal;;
+    margin-bottom: 0;
+    white-space: normal;
+    text-overflow: clip;
 }
 
-.block-btn-center{
-    text-align: center;
+.block-btn-center {
     padding: 10px;
+    text-align: center;
 }
 
-.block-btn-center .button{
+.block-btn-center .button {
     margin: 0;
 }
 
-.item-agendamento p{
+.item-agendamento p {
     font-size: 12px;
 }
 
+.box-avaliar {
+    border: 1px solid #11c1f3;
+}
 
-.link-button{
+.link-button {
     text-align: center;
-    padding: 25px 0 0;
 }
 
-.link-button label{
+.link-button label {
     font-size: 13px;
-    color: #11C1F3;
-    font-weight: bold;
+    display: block;
+    padding: 10px;
+    color: #000;
+    background-color: rgba(255, 201, 0, .4);
 }
 
-.link-button input{
+.link-button input {
+    display: none;
     visibility: hidden;
+}
+
+.more-fields {
+    padding: 10px;
+    border-top: 1px solid #11c1f3;
+}
+
+.more-fields h3 {
+    font-size: 15px;
+    margin: 10px 0 15px;
+}
+
+.new-car-icon {
+    color: #0c60ee !important;
 }
