--- a/www/templates/tab-principal.html
+++ b/www/templates/tab-principal.html
@@ -32,6 +32,13 @@
                 <i class="icon calm ion-ios-telephone"></i> Fale Conosco
                 <i class="icon ion-ios-arrow-right"></i>
             </a>
+
+            <a navigate-To="http://jornal.meionorte.com/" class="item item-icon-left item-icon-right" >
+                <i class="icon calm ion-ios-paper"></i>
+                <img src="img/logojornal.svg" alt="" width="130">
+                <i class="icon ion-ios-arrow-right"></i>
+            </a>
         </div>
     </ion-content>
 </ion-view>
+
