--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -19,5 +19,7 @@ navigation history that also transitions its views in and out.
     </ion-tab>
 
     <!-- Circulos de numero de alertas -->
-    <span class="alert-circle">30</span>
+
+    <span class="alert-circle">{{quant_alerta}}</span>
+
 </ion-tabs>
