--- a/www/css/style.css
+++ b/www/css/style.css
@@ -7,6 +7,32 @@
     width: 100%;
 }
 
+.bg-app{
+    background-color: #11C1F3;
+    padding: 0 40px;
+}
+
+.bg-logo{
+    text-align: center;
+    padding: 15px 20px 5px 20px;
+}
+
+.forgot{
+    position: relative;
+    bottom: 0;
+    width: 100%;
+    text-align: center;
+    left: 0;
+    right: 0;
+}
+
+.forgot .button{
+    font-size: 12px;
+    color: #fff !important;
+    font-weight: bold;
+}
+
+
 .alert-circle {
     font-size: 11px;
     font-weight: bold;
@@ -50,7 +76,7 @@
 }
 
 .block-btn-center {
-    padding: 10px;
+    padding: 1px 10px 10px 10px;
     text-align: center;
 }
 
@@ -95,4 +121,14 @@
 
 .new-car-icon {
     color: #0c60ee !important;
+}
+.alert-view{
+	width:100%;
+	height:100%;
+	border: solid 0px #111;
+	text-align:center;
+}
+.alert-view img{
+	width:100%;	
+	
 }
