--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -1,4 +1,4 @@
-<ion-view title="Bem-vindo">
+<ion-view title="">
     <ion-content class="bg-app widget-welcome" scroll="false">
         <div class="bg-logo">
             <img src="img/bg-logo.png" alt="">
@@ -22,7 +22,7 @@
 
         <div class="cadastro">
             <div class="block-btn-center">
-                <a class="button button-outline button-block button-light" href="#/cadastrar">
+                <a class="button button-block button-light" href="#/cadastrar">
                     Cadastre-se
                 </a>
             </div>
