--- a/www/templates/tab-principal.html
+++ b/www/templates/tab-principal.html
@@ -4,13 +4,17 @@
             <img src="img/bg-menu.jpg" alt="">
         </div>
         <div class="list">
-            <a class="item item-icon-left item-icon-right new-car-icon " href="#/tab/avaliacao">
-                <i class="icon new-car-icon ion-model-s"></i> Comprar um novo
+            <a class="item item-icon-left item-icon-right new-car-icon " href="#/tab/carrosnovos">
+                <i class="icon new-car-icon ion-model-s"></i> Veículos novos
                 <i class="icon ion-ios-arrow-right"></i>
             </a>
             <a class="item item-icon-left item-icon-right" href="#/tab/veiculos">
-                <i class="icon calm ion-android-car"></i> Veículos
+                <i class="icon calm ion-android-car"></i> Meus veículos
                 <i class="icon ion-ios-arrow-right "></i>
+            </a>
+            <a class="item item-icon-left item-icon-right" href="#/tab/testdrive">
+                <i class="icon calm ion-calendar"></i> Agendar test drive
+                <i class="icon ion-ios-arrow-right"></i>
             </a>
             <a class="item item-icon-left item-icon-right" href="#/tab/agendamento">
                 <i class="icon calm ion-calendar"></i> Agendamentos
@@ -33,7 +37,7 @@
                 <i class="icon ion-ios-arrow-right"></i>
             </a>
 
-            <a navigate-To="http://jornal.meionorte.com/" class="item item-icon-left item-icon-right" >
+            <a class="item item-icon-left item-icon-right" href="#/tab/jornal">
                 <i class="icon calm ion-ios-paper"></i>
                 <img src="img/logojornal.svg" alt="" width="130">
                 <i class="icon ion-ios-arrow-right"></i>
