--- a/www/css/style1.css
+++ b/www/css/style1.css
@@ -14,12 +14,11 @@
 
 .bg-logo{
     text-align: center;
-    padding: 20px;
+    padding: 15px 20px 5px 20px;
 }
 
 .forgot{
-
-    position: absolute;
+    position: relative;
     bottom: 0;
     width: 100%;
     text-align: center;
@@ -77,7 +76,7 @@
 }
 
 .block-btn-center {
-    padding: 10px;
+    padding: 1px 10px 10px 10px;
     text-align: center;
 }
 
@@ -123,48 +122,13 @@
 .new-car-icon {
     color: #0c60ee !important;
 }
-
-
-.slide-car .scroll, .slider {
-  height: 100%;
+.alert-view{
+	width:100%;
+	height:100%;
+	border: solid 0px #111;
+	text-align:center;
 }
-
-.item-slide{
-    height: 100%;
-}
-
-.item-slide .name-car{
-    text-align: center;
-}
-
-.item-slide img{
-    width: 100%;
-}
-
-.item-slide .detail{
-    position: absolute;
-       top: 50px;
-       background-color: rgba(0, 0, 0, 0.7);
-       border-radius: 5px;
-       min-height: 200px;
-       padding: 15px;
-       margin: 0 15px;
-}
-
-.item-slide .detail p{
-    color: #fff;
-    font-size: 15px;
-}
-
-.item-slide .detail .close-detail{
-    position: absolute;
-    top: -20px;
-    right: 0;
-    font-size: 30px;
-    color: #F00;
-    z-index: 999;
-    background: #FFF;
-    border-radius: 85px;
-    line-height: 40px;
-    height: 30px;
+.alert-view img{
+	width:100%;	
+	
 }
