--- a/www/templates/contato.html
+++ b/www/templates/contato.html
@@ -25,7 +25,7 @@
 
 
            <div class="block-btn-center">
-                <a class="button button-block button-balanced" ng-click="insContato()">
+                <a class="button button-block button-balanced" ng-disabled="!contato.departamento || !contato.assunto || !contato.mensagem" ng-click="insContato()">
                    Enviar
                 </a>
             </div>
