--- a/www/templates/tab-img-alert.html
+++ b/www/templates/tab-img-alert.html
@@ -1,12 +1,13 @@
 <ion-view view-title="Alertas">
-<ion-content class="alert-view">
+<ion-content class="padding">
 <h4>{{alertas[0].titulo}}</h4>
-<img src="{{alertas[0].link_notificacao}}">
-<h4>{{alertas[0].mensagem}}</h4>
+<div class="block-btn-center" style="background:url({{alertas[0].link_notificacao}}) no-repeat center;background-size: cover;height:300px"></div>
+<h5>{{alertas[0].mensagem}}</h5>
+
 <div class="block-btn-center">
-            <a class="button button-block button-balanced" ng-click="">
-                Estou interessado
-            </a>
-        </div>
+    <a class="button button-block button-balanced" ng-click="">
+	Estou interessado
+	</a>
+</div>
 </ion-content>
 </ion-view>
